# parsec-interface-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  MAINTAINERS.toml  README.md  build.rs
.github/workflows/: ci.yml  nightly.yml
ci/: all.sh
src/: lib.rs
src/operations/: algorithm.rs  asym_sign.rs  asym_verify.rs  attest_key.rs  can_do_crypto.rs  create_key.rs  delete_client.rs  destroy_key.rs  export_public_key.rs  generate_key.rs  import_key.rs  key_attributes.rs  list_authenticators.rs  list_clients.rs  list_keys.rs  list_opcodes.rs  list_providers.rs  mod.rs  ping.rs  prepare_key_attestation.rs  psa_aead_decrypt.rs  psa_aead_encrypt.rs  psa_algorithm.rs  psa_asymmetric_decrypt.rs  psa_asymmetric_encrypt.rs  psa_cipher_decrypt.rs  psa_cipher_encrypt.rs  psa_destroy_key.rs  psa_export_key.rs  psa_export_public_key.rs  psa_generate_key.rs  psa_generate_random.rs  psa_hash_compare.rs  psa_hash_compute.rs  psa_import_key.rs  psa_key_attributes.rs  psa_raw_key_agreement.rs  psa_sign_hash.rs  psa_sign_message.rs  psa_verify_hash.rs  (+5 more)
src/operations_protobuf/: convert_algorithm.rs  convert_asym_sign.rs  convert_asym_verify.rs  convert_attest_key.rs  convert_can_do_crypto.rs  convert_create_key.rs  convert_delete_client.rs  convert_destroy_key.rs  convert_export_public_key.rs  convert_generate_key.rs  convert_import_key.rs  convert_key_attributes.rs  convert_list_authenticators.rs  convert_list_clients.rs  convert_list_keys.rs  convert_list_opcodes.rs  convert_list_providers.rs  convert_ping.rs  convert_prepare_key_attestation.rs  convert_psa_aead_decrypt.rs  convert_psa_aead_encrypt.rs  convert_psa_algorithm.rs  convert_psa_asymmetric_decrypt.rs  convert_psa_asymmetric_encrypt.rs  convert_psa_cipher_decrypt.rs  convert_psa_cipher_encrypt.rs  convert_psa_destroy_key.rs  convert_psa_export_key.rs  convert_psa_export_public_key.rs  convert_psa_generate_key.rs  convert_psa_generate_random.rs  convert_psa_hash_compare.rs  convert_psa_hash_compute.rs  convert_psa_import_key.rs  convert_psa_key_attributes.rs  convert_psa_raw_key_agreement.rs  convert_psa_sign_hash.rs  convert_psa_sign_message.rs  convert_psa_verify_hash.rs  convert_psa_verify_message.rs  (+4 more)
src/operations_protobuf/generated_ops/: attest_key.rs  can_do_crypto.rs  delete_client.rs  list_authenticators.rs  list_clients.rs  list_keys.rs  list_opcodes.rs  list_providers.rs  mod.rs  ping.rs  prepare_key_attestation.rs  psa_aead_decrypt.rs  psa_aead_encrypt.rs  psa_algorithm.rs  psa_asymmetric_decrypt.rs  psa_asymmetric_encrypt.rs  psa_cipher_decrypt.rs  psa_cipher_encrypt.rs  psa_destroy_key.rs  psa_export_key.rs  psa_export_public_key.rs  psa_generate_key.rs  psa_generate_random.rs  psa_hash_compare.rs  psa_hash_compute.rs  psa_import_key.rs  psa_key_attributes.rs  psa_mac_compute.rs  psa_mac_verify.rs  psa_raw_key_agreement.rs  psa_sign_hash.rs  psa_sign_message.rs  psa_verify_hash.rs  psa_verify_message.rs
src/requests/: mod.rs  response_status.rs  utils.rs
src/requests/common/: mod.rs  wire_header_1_0.rs
src/requests/request/: mod.rs  request_auth.rs  request_body.rs  request_header.rs
src/requests/response/: mod.rs  response_body.rs  (+1 more)
tests/: ci.sh
