[package]
name = "parsec-interface"
version = "0.28.0"
authors = ["Parsec Project Contributors"]
description = "Parsec interface library to communicate using the wire protocol"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-interface-rs"
readme = "README.md"
keywords = ["parsec", "interface", "serialization"]
categories = ["encoding"]
edition = "2018"

[build-dependencies]
prost-build = { version = "0.8.0", optional = true }

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"
num-traits = "0.2.12"
num-derive = "0.3.2"
num = "0.4.0"
prost = "0.8.0"
arbitrary = { version = "0.4.6", features = ["derive"], optional = true }
uuid = "0.8.1"
log = "0.4.11"
psa-crypto = { version = "0.10.0", default-features = false }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
secrecy = { version = "0.7.0", features = ["serde"] }
derivative = "2.1.1"

[features]
testing = []
fuzz = ["arbitrary"]
regenerate-protobuf = ["prost-build"]
